ajustes nos slides

--- a/fisl/17/heroku-confboilerplate/index.html
+++ b/fisl/17/heroku-confboilerplate/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-	<title>Shower Presentation Engine</title>
+	<title>Faça o site do seu evento com Heroku + Conf-boilerplate</title>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,12 +9,12 @@
 </head>
 <body class="shower list">
 	<header class="caption">
-		<h1>Shower Presentation Engine</h1>
-		<p>Yours Truly, Famous Inc.</p>
+		<h1>Faça o site do seu evento com Heroku + Conf-boilerplate</h1>
+		<p><a href="https://twitter.com/vanessametonini">Vanessa Me Tonini</a>, <a href="http://www.marialab.org">Marialab Hackerspace</a>.</p>
 	</header>
 	<section class="slide" id="cover">
-		<h2>Shower Presentation Engine</h2>
-		<p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
+		<h2>Faça o site do seu evento com Heroku + Conf-boilerplate</h2>
+		<p><a href="https://twitter.com/vanessametonini">Vanessa Me Tonini</a>, <a href="http://www.marialab.org">Marialab Hackerspace</a>.</p>
 		<img src="pictures/cover.jpg" alt="" class="cover">
 		<!--
 			To apply styles to the certain slides
@@ -172,7 +172,7 @@
 		</style>
 	</section>
 	<p class="badge">
-		<a href="https://github.com/shower/shower">Fork me on GitHub</a>
+		<a href="https://github.com/vanessametonini/mytalks/tree/master/fisl/17/heroku-confboilerplate">Fork me on GitHub</a>
 	</p>
 	<!--
 		To hide progress bar from entire presentation
