--- a/fisl/17/old/index.html
+++ b/fisl/17/old/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles/screen.css">
 	<link rel="stylesheet" href="styles/slides.css">
 </head>
-<body class="list">
+<body class="list
 	<!--
 		Debug class on <body> enables
 		cyan grid on slides
