Quase terminando o conteúdo dos slides

--- a/fisl/17/heroku-confboilerplate/index.html
+++ b/fisl/17/heroku-confboilerplate/index.html
@@ -73,7 +73,7 @@
 		<ol>
 			<li>Hospedagem/infraestrutura</li>
 			<li>A própria aplicação (código fonte)</li>
-			<li>Domínio (meusite.com.br)</li>
+			<li>Domínio (ex: meusite.com.br)</li>
 		</ol>
 	</section>
 
@@ -82,6 +82,7 @@
 	</section>
 
 	<section class="slide">
+		<h2>Hospedagem e infraestrutura</h2>
 		<p>
 			Uma dor que nós desenvolvedores sempre passamos quando queremos fazer um projeto e publicá-lo na web é escolher a hospedagem com a infraestrutura ideal
 		</p>
@@ -107,7 +108,7 @@
 		</ul>
 	</section>
 	<section class="slide">
-		<p class="shout">Então surgiu o PaaS == <br>Platform as Service == <br>Plataforma como Serviço</p>
+		<p class="shout">Então surgiu o <br>PaaS <br>Platform as Service <br>Plataforma como Serviço</p>
 	</section>
 
 	<section class="slide">
@@ -115,38 +116,35 @@
 	</section>
 
 	<section class="slide">
+		<h2>Heroku</h2>
 		<p>
 			É um serviço cloud/nuvem, no qual entrega para o cliente um ambiente pronto para receber a aplicação.
 		</p>
-	</section>
-	<section class="slide">
-		<p>
+		<p class="next">
 			Não é necessário entender de infraesturura para utilizar o serviço.
 		</p>
-	</section>
-	<section class="slide">
-		<p>
+		<p class="next">
 			O Heroku surgiu com o propósito de facilitar a vida do desenvolvedor.
 		</p>
+		<p class="next">♥</p>
 	</section>
 	<section class="slide">
 		<h2>Linguagens suportadas:</h2>
 		<p>
-			Node, Ruby, Java, PHP, Python, Go, Scala, Clojure
+			<img src="pictures/heroku-langs.png" alt="Node, Ruby, Java, PHP, Python, Go, Scala, Clojure">
 		</p>
+		<p>Node, Ruby, Java, PHP, Python, Go, Scala, Clojure</p>
 	</section>
 	<section class="slide">
 		<h2>Plano gratuito:</h2>
 		<p>
 			Ideal for experimenting with cloud applications in a limited sandbox.
 		</p>
-		<p>
-			<code>
+		<p lang="en">
 			SLEEPS AFTER 30 MINS OF INACTIVITY <br>
 			USES AN ACCOUNT-BASED POOL OF FREE DYNO HOURS <br>
 			CUSTOM DOMAINS <br>
 			512 MB RAM │ 1 web/1 worker
-			</code>
 		</p>
 	</section>
 	<section class="slide">
@@ -156,76 +154,154 @@
 		</p>
 	</section>
 
+	<section class="slide">
+		<h2 class="shout shrink">Conf Boilerplate</h2>
+	</section>
 
-	Conf Boilerplate
+	<section class="slide">
+		<h2>Conf Boilerplate</h2>
+		<p>
+			o projeto foi criado em 2012 pela BrazilJS Foundation, com o propósito ajudar aqueles que querem organizar conferências/eventos e não tem muito tempo/recursos para investir
+		</p>
+		<p class="next">
+			naquela época estava rolando um boom de eventos, principalmente os famosos "FrontIns"
+		</p>
+	</section>
 
-	o projeto foi criado em 2012 pela BrazilJS Foundation, com o propósito ajudar aqueles que querem organizar conferências/eventos e não tem muito tempo para criar o site disso.
+	<section class="slide">
+		<h2>Conf Boilerplate</h2>
+		<p>
+			é open source e está o Github <br>
+			<a href="https://github.com/braziljs/conf-boilerplate">https://github.com/braziljs/conf-boilerplate</a>
+		</p>
+		<p class="next">
+			Tecnologias: <br>
+			Git e Docpad, que é um gerador de estático feito em Nodejs
+		</p>
+		<p class="next">♥</p>
+	</section>
 
-	naquela época estava rolando um boom de eventos, principalmente os famosos "FrontIns"
+	<section class="slide">
+		<h2>Conf Boilerplate</h2>
+			<iframe width="840" height="400" src="https://www.youtube.com/embed/EI99oZI3nKY" frameborder="0" allowfullscreen></iframe>
+	</section>
+	<section>
+		<h2>Conf Boilerplate</h2>
+		<p>
+			Documentação em português
+			<a href="https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md">https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md</a>
+		</p>
+	</section>
 
-	é opensource (obviamente) e está o Github
-	https://github.com/braziljs/conf-boilerplate
+	<section class="slide">
+		<h2 class="shout shrink">Hora da mão na massa!!!</h2>
+	</section>
 
-	Tecnologias:
-	Git e
-	Docpad, que é um gerador de estático feito em Nodejs
+	<section class="slide">
+		<h2>Downloads</h2>
+		<ul>
+			<li>
+				<strong>Git</strong>
+				<a href="https://git-scm.com/downloads">https://git-scm.com/downloads</a>
+			</li>
+			<li>
+				<strong>Node</strong>
+				<a href="https://nodejs.org/en/">https://nodejs.org/en/</a>
+			</li>
+			<li>
+				<strong>Heroku Toolbelt</strong>
+				<a href="https://toolbelt.heroku.com/">https://toolbelt.heroku.com/</a>
+			</li>
+			<li>
+				Seria legal você também criar conta no <a href="https://github.com/">Github</a>
+			</li>
+			<li>
+				Você deve criar uma conta no <a href="https://heroku.com/">Heroku</a>
+			</li>
+		</ul>
+	</section>
 
-	Video do Zeno https://www.youtube.com/watch?v=EI99oZI3nKY
+	<section class="slide">
+		<h2>Executar local</h2>
+		<ol>
+			<li>Forkar, e renomear para o nome do seu evento</li>
+			<li class="next">Clonar do meu local</li>
+			<li class="next">Vá para a pasta do projeto</li>
+			<li class="next"><code>npm install</code> 	para instalar as dependencias</li>
+			<li class="next"><code>npm run watch</code> para executar local e assistir mudanças</li>
+		</ol>
+	</section>
 
-	Documentação em português
-	https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md
+	<section class="slide">
+		<h2>Customizando meu site</h2>
+		<ol>
+			<li>docpad.js</li>
+			<li class="next">overview na documentação</li>
+			<li class="next">criar um tema novo</li>
+			<li class="next">customizar o css</li>
+		</ol>
+	</section>
 
+	<section class="slide">
+		<h2 class="shout shrink">Deploy!</h2>
+	</section>
 
-Hora da mão na massa!!!
+	<section class="slide">
+		<h2>Com Github Pages</h2>
+		<p><code>npm run deploy</code></p>
+		<p class="next">
+			https://myuser.github.io/myrepo/
+		</p>
+	</section>
 
-	Downloads
-		Git
-		https://git-scm.com/downloads
+	<section class="slide">
+		<h2>Com Heroku</h2>
+		<p>Criar arquivo com o nome <code>Procfile</code> (sem extensão)</p>
+		<p class="next">
+			conteúdo do arquivo: <br>
+			<code>web: docpad run</code>
+		</p>
+		<ol>
+			<li class="next">No site do Heroku criar app</li>
+			<li class="next">Conectar com github</li>
+			<li class="next">
+				https://myapp.herokuapp.com
+			</li>
+		</ol>
+		<p>
+	</section>
 
-		Node
-		https://nodejs.org/en/
+	<section class="slide">
+		<h2>Heroku, outro cenário</h2>
+		<p>Se o repositório não estiver no Github, porém estiver num repositório Git (Bitbucket/Gitlab/VSTS) você pode fazer via <strong>Heroku Toolbelt</strong></p>
 
-		Docpad
-		http://docpad.org/docs/install
+		<p class="next">
+			No Heroku Toolbelt você se autentica em sua conta via terminal e consegue realizar diversas configurações em seus apps
+		</p>
+	</section>
 
-		Heroku Toolbelt
-		https://toolbelt.heroku.com/
+	<section class="slide">
+		<h2>Adicionando o repositório remoto do Heroku</h2>
+		<p>
+			Após isto, basta adicionar em seu repositório Git uma nova <code>remote</code>
+		</p>
 
-		Seria legal você também criar conta no Github
-		Você deve criar uma conta no Heroku
-		Usuarios de Windows, 
+		<p class="next">
+			Para fazer isto basta: <br>
+			<code>git remote add heroku https://git.heroku.com/myapp.git</code>
+		</p>
+		<p class="next">
+			<code>git push heroku</code>
+		</p>
+	</section>
 
-	Executar local
+	<section class="slide">
+		<h2 class="shout shrink">Configurando o domínio personalizado</h2>
+	</section>
 
-		Forkar, e renomear para o nome do seu evento
-		Clonar no meu local
-		Vá para a pasta do projeto
-		$npm install 	para instalar as dependencias
-		$npm run watch	para executar local e assistir mudanças
+	<section class="slide">
 
-	Customizando meu site
-		docpad.js
-		overview na documentação
-		criar um tema novo
-		customizar o css
-
-	Deploy da aplicação 
-		Com Github Pages
-		npm run deploy
-
-	Heroku part
-
-		Procfile
-		web: docpad run
-
-		Conectar com github
-
-		Se o repositório não estiver no github,
-		você pode fazer via Heroku Toolbelt
-		heroku toolbelt instalado
-		//git remote add heroku <url>
-
-	Configurando o domínio personalizado
+		
 		Addons Heroku
 		PointDNS
 
@@ -235,155 +311,20 @@ Hora da mão na massa!!!
 		RegistroBR
 		DNS
 
-heroku domains --app mulheres-tech-day
-
-
-
-
-
-
-
-
-
-
-Requisitos da oficina
-Internet
-Git, NodeJS, Heroku Toolbelt
-Desejável
-
-
-
-
-Referências
-
-Video do Zeno https://www.youtube.com/watch?v=EI99oZI3nKY
-
-http://www.devmedia.com.br/primeiros-passos-em-paas-com-heroku/29465
-
-https://devcenter.heroku.com/articles/pointdns#provisioning-the-add-on
-
-https://devcenter.heroku.com/articles/custom-domains
-
-https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md
+		heroku domains --app mulheres-tech-day
+	</section>
 
 	<section class="slide">
-		<h2>Shower key features</h2>
-		<ol>
-			<li>Built on HTML, CSS and vanilla JavaScript</li>
-			<li>Works in all modern browsers</li>
-			<li>Themes are separated from engine</li>
-			<li>Modular and extensible</li>
-			<li>Fully keyboard accessible</li>
-			<li>Printable to PDF</li>
-		</ol>
-		<p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
+		<h2>Referências</h2>
+		<ul>
+			<li>Video do Zeno https://www.youtube.com/watch?v=EI99oZI3nKY</li>
+			<li>http://www.devmedia.com.br/primeiros-passos-em-paas-com-heroku/29465</li>
+			<li>https://devcenter.heroku.com/articles/pointdns#provisioning-the-add-on</li>
+			<li>https://devcenter.heroku.com/articles/custom-domains</li>
+			<li>https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md</li>
+		</ul>
 	</section>
-	<section class="slide">
-		<h2>Plain text on your slides</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
-	</section>
-	<section class="slide">
-		<h2>Two columns if you like</h2>
-		<p class="double">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-	</section>
-	<section class="slide">
-		<h2>All kind of lists</h2>
-		<ol>
-			<li>Simple lists are marked with bullets</li>
-			<li>Ordered lists begin with a number</li>
-			<li>You can even nest lists one inside another
-				<ul>
-					<li>Or mix their types</li>
-					<li>But do not go too far</li>
-					<li>Otherwise audience will be bored</li>
-				</ul>
-			</li>
-			<li>Look, seven rows exactly!</li>
-		</ol>
-	</section>
-	<section class="slide">
-		<h2>Serious citations</h2>
-		<figure>
-			<blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-			</blockquote>
-			<figcaption>Marcus Tullius Cicero</figcaption>
-		</figure>
-	</section>
-	<section class="slide">
-		<h2>Code samples</h2>
-		<pre>
-			<code>&lt;!DOCTYPE html&gt;</code>
-			<code class="mark">&lt;html lang="en"&gt;</code>
-			<code><mark>&lt;head&gt;</mark> <span class="comment">&lt;!--Comment--&gt;</span></code>
-			<code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-			<code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-			<code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-			<code><mark>&lt;/head&gt;</mark></code>
-		</pre>
-	</section>
-	<section class="slide">
-		<h2>Even tables</h2>
-		<table>
-		<tr>
-			<th scope="col">Locavore</th>
-			<th>Umami</th>
-			<th>Helvetica</th>
-			<th>Vegan</th>
-		</tr>
-		<tr>
-			<th scope="row">Fingerstache</th>
-			<td>Kale</td>
-			<td>Chips</td>
-			<td>Keytar</td>
-		</tr>
-		<tr>
-			<th scope="row">Sriracha</th>
-			<td>Gluten-free</td>
-			<td>Ennui</td>
-			<td>Keffiyeh</td>
-		</tr>
-		<tr>
-			<th scope="row">Thundercats</th>
-			<td>Jean</td>
-			<td>Shorts</td>
-			<td>Biodiesel</td>
-		</tr>
-		<tr>
-			<th scope="row">Terry</th>
-			<td>Richardson</td>
-			<td>Swag</td>
-			<td>Blog</td>
-		</tr>
-		</table>
-		<p>It’s good to have information organized.</p>
-	</section>
-	<section class="slide" id="picture">
-		<h2>Pictures</h2>
-		<img src="pictures/picture.jpg" alt="" class="cover">
-	</section>
-	<section class="slide">
-		<h2 class="shout shrink">You can even shout this way</h2>
-	</section>
-	<section class="slide">
-		<h2>Inner navigation</h2>
-		<ol>
-			<li>Lets you reveal list items one by one</li>
-			<li class="next">To keep some key points</li>
-			<li class="next">In secret from audience</li>
-			<li class="next">But it will work only once</li>
-			<li class="next">Nobody wants to see the same joke twice</li>
-		</ol>
-	</section>
-	<section class="slide grid">
-		<h2>All nicely aligned to grid</h2>
-	</section>
-	<section class="slide" id="see-more">
-		<h2 class="shout">
-			<img src="pictures/logo.svg" alt="Shower logo">
-			<a href="https://github.com/shower/shower">See more on GitHub</a>
-		</h2>
-	</section>
+
 	<p class="badge">
 		<a href="https://github.com/vanessametonini/mytalks/tree/master/fisl/17/heroku-confboilerplate">Fork me on GitHub</a>
 	</p>
