Finalizado conteúdo. Ajustes finos

--- a/fisl/17/heroku-confboilerplate/index.html
+++ b/fisl/17/heroku-confboilerplate/index.html
@@ -225,9 +225,10 @@
 		<h2>Executar local</h2>
 		<ol>
 			<li>Forkar, e renomear para o nome do seu evento</li>
-			<li class="next">Clonar do meu local</li>
+			<li class="next">Usando terminal:</li>
+			<li class="next">Clonar para o meu local</li>
 			<li class="next">Vá para a pasta do projeto</li>
-			<li class="next"><code>npm install</code> 	para instalar as dependencias</li>
+			<li class="next"><code>npm install</code> 	para instalar as dependências</li>
 			<li class="next"><code>npm run watch</code> para executar local e assistir mudanças</li>
 		</ol>
 	</section>
@@ -300,28 +301,27 @@
 	</section>
 
 	<section class="slide">
+		<h2>Heroku</h2>
+		<ol>
+			<li>Painel do Heroku: Settings</li>
+			<li class="next">Domains</li>
+			<li class="next">heroku apps --all</li>
+			<li class="next">heroku domains:add</li>
+			<li class="next">heroku domains --app myappname</li>
+		</ol>
+	</section>
 
-		
-		Addons Heroku
-		PointDNS
-
-
-		$ heroku addons
-
-		RegistroBR
-		DNS
-
-		heroku domains --app mulheres-tech-day
+	<section class="slide">
+		<h2 class="shout shrink">dúvidas?</h2>
 	</section>
 
 	<section class="slide">
 		<h2>Referências</h2>
 		<ul>
-			<li>Video do Zeno https://www.youtube.com/watch?v=EI99oZI3nKY</li>
 			<li>http://www.devmedia.com.br/primeiros-passos-em-paas-com-heroku/29465</li>
-			<li>https://devcenter.heroku.com/articles/pointdns#provisioning-the-add-on</li>
-			<li>https://devcenter.heroku.com/articles/custom-domains</li>
+			<li>Video do Zeno https://www.youtube.com/watch?v=EI99oZI3nKY</li>
 			<li>https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md</li>
+			<li>https://devcenter.heroku.com/articles/custom-domains</li>
 		</ul>
 	</section>
 
