link para downloads

--- a/fisl/17/heroku-confboilerplate/index.html
+++ b/fisl/17/heroku-confboilerplate/index.html
@@ -39,6 +39,7 @@
 			<li>Heroku</li>
 			<li>Conf-boilerplate</li>
 			<li>Oficina Hands On!</li>
+			<li><a href="#29">Downloads</a></li>
 		</ul>
 	</section>
 	<section class="slide">
