--- a/fisl/17/heroku-confboilerplate/index.html
+++ b/fisl/17/heroku-confboilerplate/index.html
@@ -186,7 +186,7 @@
 		<h2>Conf Boilerplate</h2>
 			<iframe width="840" height="400" src="https://www.youtube.com/embed/EI99oZI3nKY" frameborder="0" allowfullscreen></iframe>
 	</section>
-	<section>
+	<section class="slide">
 		<h2>Conf Boilerplate</h2>
 		<p>
 			Documentação em português
