--- a/fisl/17/heroku-confboilerplate/index.html
+++ b/fisl/17/heroku-confboilerplate/index.html
@@ -15,7 +15,11 @@
 	</header>
 	<section class="slide" id="cover">
 		<h2>Faça o site do seu evento com Heroku + Conf-boilerplate</h2>
-		<p><a href="https://twitter.com/vanessametonini">Vanessa Me Tonini</a> <br> <a href="http://www.marialab.org">Marialab Hackerspace</a></p>
+		<p>
+			<a href="https://twitter.com/vanessametonini">Vanessa Me Tonini</a> <a href="http://www.marialab.org">Marialab Hackerspace</a>
+			<br>
+			https://vanessametonini.github.io/mytalks/
+		</p>
 		<div class="fisl-logo"><img src="pictures/fisl17.png" alt="FISL 17"></div>
 	</section>
 	<!-- section.slide>h2+p -->
@@ -176,6 +180,10 @@
 			<a href="https://github.com/braziljs/conf-boilerplate">https://github.com/braziljs/conf-boilerplate</a>
 		</p>
 		<p class="next">
+			Documentação em português
+			<a href="https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md">https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md</a>
+		</p>
+		<p class="next">
 			Tecnologias: <br>
 			Git e Docpad, que é um gerador de estático feito em Nodejs
 		</p>
@@ -186,14 +194,6 @@
 		<h2>Conf Boilerplate</h2>
 			<iframe width="840" height="400" src="https://www.youtube.com/embed/EI99oZI3nKY" frameborder="0" allowfullscreen></iframe>
 	</section>
-	<section class="slide">
-		<h2>Conf Boilerplate</h2>
-		<p>
-			Documentação em português
-			<a href="https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md">https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md</a>
-		</p>
-	</section>
-
 	<section class="slide">
 		<h2 class="shout shrink">Hora da mão na massa!!!</h2>
 	</section>
@@ -323,6 +323,7 @@
 			<li>Video do Zeno https://www.youtube.com/watch?v=EI99oZI3nKY</li>
 			<li>https://github.com/braziljs/conf-boilerplate/blob/master/README-pt.md</li>
 			<li>https://devcenter.heroku.com/articles/custom-domains</li>
+			<li>Slides Engine: <a href="https://github.com/shower/shower">Shower</a></li>
 		</ul>
 	</section>
 
