--- a/secot/index.html
+++ b/secot/index.html
@@ -657,7 +657,7 @@
 	<!-- section.slide>div>h2+p -->
 	<div class="progress"><div></div></div>
 	<script src="highlight.pack.js"></script>
-	<script src="../shower-core/shower.min.js"></script>
+	<script src="http://www.vanessametonini.com.br/shower-core/shower.min.js"></script>
 	<script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 	<!-- Copyright © 2013 Yours Truly, Famous Inc. -->
 </body>
