Ajustes apresentação MNT

--- a/fisl/17/heroku-confboilerplate/index.html
+++ b/fisl/17/heroku-confboilerplate/index.html
@@ -267,7 +267,8 @@
 			<li class="next">No site do Heroku criar app</li>
 			<li class="next">Conectar com github</li>
 			<li class="next">
-				https://myapp.herokuapp.com
+				https://myapp.herokuapp.com <br>
+				apertar deploy
 			</li>
 		</ol>
 		<p>
@@ -306,9 +307,9 @@
 		<ol>
 			<li>Painel do Heroku: Settings</li>
 			<li class="next">Domains</li>
-			<li class="next">heroku apps --all</li>
-			<li class="next">heroku domains:add</li>
-			<li class="next">heroku domains --app myappname</li>
+			<li class="next"><code>heroku apps --all</code></li>
+			<li class="next"><code>heroku domains:add</code></li>
+			<li class="next"><code>heroku domains --app myappname</code></li>
 		</ol>
 	</section>
 
