--- a/mnt/17/heroku-confboilerplate/index.html
+++ b/mnt/17/heroku-confboilerplate/index.html
@@ -15,24 +15,25 @@
 		<a href="http://www.marialab.org">Marialab</a>,
 		<a href="https://www.caelum.com.br/">Caelum</a>.</p>
 	</header>
-	<section class="slide" id="cover">
-		<h2>Faça o site do seu evento com Heroku + Conf-boilerplate</h2>
-		<p>
-			<a href="https://twitter.com/vanessametonini">Vanessa Me Tonini</a> 
-			<a href="http://www.marialab.org">Marialab</a> 
-			<a href="https://www.caelum.com.br/">Caelum</a>
-			<br>
-			https://vanessametonini.github.io/mytalks/
-		</p>
-		<div class="fisl-logo"><img src="pictures/fisl17.png" alt="FISL 17"></div>
+	<section class="slide mnt-cover" id="cover">
+		<div>
+			<h2>Faça o site do seu evento com Heroku + Conf-boilerplate</h2>
+			<p>
+				<a href="https://twitter.com/vanessametonini">Vanessa Me Tonini</a> 
+				<a href="http://www.marialab.org">Marialab</a> 
+				<a href="https://www.caelum.com.br/">Caelum</a>
+				<br>
+				https://vanessametonini.github.io/mytalks/
+			</p>
+		</div>
 	</section>
 	<!-- section.slide>h2+p -->
 	<section class="slide">
 		<h2>@vanessametonini</h2>
 		<ul>
-			<li>Sou Agile Coach na <a href="http://www.lambda3.com.br/">Lambda3</a></li>
+			<li>Sou Instrutora de Frontend na <a href="https://www.caelum.com.br/">Caelum</a></li>
 			<li>Voluntária na <a href="http://marialab.org/">Marialab Hackerspace</a></li>
-			<li>Fui dev frontend por uns 7 anos</li>
+			<li>Fui dev frontend por uns 8 anos</li>
 			<li>Tecnóloga em Sistemas para Internet UNIVALI 2011</li>
 			<li>Especialista em Desenvolvimento Web UTFPR 2014</li>
 			<li>MBA Engenharia de Software FIAP 2015</li>
