--- a/mnt/17/heroku-confboilerplate/prepared/index.html
+++ b/mnt/17/heroku-confboilerplate/prepared/index.html
@@ -11,12 +11,16 @@
 <body class="shower list">
 	<header class="caption">
 		<h1>Faça o site do seu evento com Heroku + Conf-boilerplate</h1>
-		<p><a href="https://twitter.com/vanessametonini">Vanessa Me Tonini</a>, <a href="http://www.marialab.org">Marialab Hackerspace</a>.</p>
+		<p><a href="https://twitter.com/vanessametonini">Vanessa Me Tonini</a>, 
+		<a href="http://www.marialab.org">Marialab</a>,
+		<a href="https://www.caelum.com.br/">Caelum</a>.</p>
 	</header>
 	<section class="slide" id="cover">
 		<h2>Faça o site do seu evento com Heroku + Conf-boilerplate</h2>
 		<p>
-			<a href="https://twitter.com/vanessametonini">Vanessa Me Tonini</a> <a href="http://www.marialab.org">Marialab Hackerspace</a>
+			<a href="https://twitter.com/vanessametonini">Vanessa Me Tonini</a> 
+			<a href="http://www.marialab.org">Marialab</a> 
+			<a href="https://www.caelum.com.br/">Caelum</a>
 			<br>
 			https://vanessametonini.github.io/mytalks/
 		</p>
