Ajuste nas dependencias e licença

--- a/ladytalks/internet-web/index.html
+++ b/ladytalks/internet-web/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="styles/screen.css">
 	<link rel="stylesheet" href="styles/styles.css">
 </head>
+
+<body class="shower">
 	<!--
 		Debug class on <body> enables
 		cyan grid on slides
@@ -169,7 +171,7 @@ A digitalização converte o sinal analógico, por exemplo a voz de um locutor, 
 	<div class="progress"><div></div></div>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script type="text/javascript" src="http://www.vanessametonini.com.br/shower-core/shower.min.js"></script>
+	<script src="../../node_modules/shower-core/shower.min.js"></script>
 	<script type="text/javascript">
 		$.fn.draggable = function(){
 		    var $this = this,
