--- a/frontinsampa/index.html
+++ b/frontinsampa/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="styles/screen.css">
 	<link rel="stylesheet" href="styles/fsp.css">
 </head>
-<body class="list">
+<body class="list shower">
 	<header class="caption">
 		<h1>WAI-ARIA: acessibilidade em tempo real</h1>
 		<p>Vanessa Me Tonini</p>
@@ -658,7 +658,7 @@
 	<!-- section.slide>div>h2+p -->
 	<div class="progress"><div></div></div>
 	<script src="highlight.pack.js"></script>
-	<script src="http://www.vanessametonini.com.br/shower-core/shower.min.js"></script>
+	<script src="../node_modules/shower-core/shower.min.js"></script>
 	<script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 	<!-- Copyright © 2013 Yours Truly, Famous Inc. -->
 </body>
